plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'cn.gov.xivpn2'
    compileSdk 35

    defaultConfig {
        applicationId "cn.gov.xivpn2"
        minSdk 28
        targetSdk 35
        versionCode 7
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }


    signingConfigs {
        release {
            storeFile file("../sign/keystore.jks")
            storePassword System.getenv("RELEASE_KEYSTORE_PASSWORD")
            keyAlias System.getenv("RELEASE_KEYSTORE_ALIAS")
            keyPassword System.getenv("RELEASE_KEY_PASSWORD")
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.release
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    packagingOptions {
    }

    buildFeatures {
        buildConfig true
    }

}

dependencies {
    implementation libs.room.runtime
    annotationProcessor libs.room.compiler
    implementation libs.google.guava
    implementation libs.gson
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation libs.work.runtime
    implementation libs.okhttp
    implementation libs.preference

}